vscode: Enable formatter by ruby-lsp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
+    "[ruby]": {
+        "editor.defaultFormatter": "Shopify.ruby-lsp"
+    },
     "cSpell.words": [
         "bindir",
         "KOMIYA",
+        "lsp",
         "popen",
         "readlines",
         "Takeshi"
