--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
         "readlines",
         "Takeshi",
         "yardoc"
-    ]
+    ],
+    "rbs-helper.rbs-inline-on-save": true,
+    "rbs-helper.rbs-inline-signature-directory": "sig/"
 }
