--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 AllCops:
-  TargetRubyVersion: 3.2
+  NewCops: enable
+  TargetRubyVersion: 3.3
+
+plugins:
+  - rubocop-rake
+  - rubocop-rspec
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
