rubocop: Allow RBS-Inline and Steep style type comments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,10 @@ plugins:
   - rubocop-rake
   - rubocop-rspec
 
+Layout/LeadingCommentSpace:
+  AllowRBSInlineAnnotation: true
+  AllowSteepAnnotation: true
+
 Style/Documentation:
   Enabled: false
 
