--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     },
     "cSpell.words": [
         "bindir",
+        "bytesize",
+        "ERB",
         "KOMIYA",
         "lsp",
         "popen",
